taking into account changes from portfolio_tracking

--- a/wallet_app/templates/dashboard_wallet.html
+++ b/wallet_app/templates/dashboard_wallet.html
@@ -28,10 +28,22 @@
       
       <main>
         <div class="chartContainer">
-            <div id="wallet" class="chart">
-              <text class="chartTitle">Wallet</text>
-              <svg></svg>
-            </div>
+          <div id="wallet_valuation" class="chart">
+            <text class="chartTitle">Wallet valuation</text>
+            <svg></svg>
+          </div>
+        </div>
+        <div class="chartContainer">
+          <div id="wallet_share_value" class="chart">
+            <text class="chartTitle">Wallet share_value</text>
+            <svg></svg>
+          </div>
+        </div>
+        <div class="chartContainer">
+          <div id="wallet_share_value_2" class="chart">
+            <text class="chartTitle">Wallet share_value_2</text>
+            <svg></svg>
+          </div>
         </div>
         <div class="chartContainer">
           <div id="stock" class="chart">
