--- a/wallet_app/templates/dashboard_wallet.html
+++ b/wallet_app/templates/dashboard_wallet.html
@@ -28,6 +28,12 @@
       
       <main>
         <div class="chartContainer">
+          <div id="wallet" class="chart">
+            <text class="chartTitle">Wallet</text>
+            <svg></svg>
+          </div>
+        </div>
+        <div class="chartContainer">
           <div id="wallet_valuation" class="chart">
             <text class="chartTitle">Wallet valuation</text>
             <svg></svg>
@@ -42,6 +48,12 @@
         <div class="chartContainer">
           <div id="wallet_share_value_2" class="chart">
             <text class="chartTitle">Wallet share_value_2</text>
+            <svg></svg>
+          </div>
+        </div>
+        <div class="chartContainer">
+          <div id="wallet_twrr" class="chart">
+            <text class="chartTitle">Wallet TWRR</text>
             <svg></svg>
           </div>
         </div>
