--- a/wallet_app/templates/dashboard_wallet.html
+++ b/wallet_app/templates/dashboard_wallet.html
@@ -27,6 +27,12 @@
       </header>
       
       <main>
+        <div class="year-selector">
+          <label for="year">Choisir l'année :</label>
+          <select id="year">
+              <!-- Les options seront ajoutées dynamiquement avec JavaScript -->
+          </select>
+        </div>
         <div class="chartContainer">
           <div id="wallet" class="chart">
             <text class="chartTitle">Wallet</text>
