--- a/wallet_app/templates/view_assets.html
+++ b/wallet_app/templates/view_assets.html
@@ -13,7 +13,7 @@
     <form action="{{ url_for('view_assets') }}" method="post">
         <label for="ticker">Ticker:</label>
         <input type="text" id="ticker" name="ticker" placeholder="APPL" required>
-        
+
         <button type="submit">Rechercher</button>
     </form>
 
@@ -32,8 +32,8 @@
                 <input type="hidden" name="ticker" value="{{ search_result.symbol }}">
                 <label for="broker">Broker:</label>
                 <input type="text" id="broker" name="broker" placeholder="Your Broker" required>
-                <label for="devise">Devise:</label>
-                <input type="text" id="devise" name="devise" placeholder="Currency" required>
+                <label for="currency">Devise:</label>
+                <input type="text" id="currency" name="currency" placeholder="Currency" required>
 
                 <h3>Orders</h3>
                 <div id="order-form">
@@ -84,6 +84,6 @@
             orderForm.appendChild(newOrderDiv);
         }
     </script>
-    
+
 </body>
 </html>
